StereoKit/Native/NativeAPI.cs


		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              model_find          (string id);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              model_copy          (IntPtr model);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              model_create        ();
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              model_create_mesh   (IntPtr mesh, IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              model_create_mem    ([In] byte[] filename_utf8, byte[] data, UIntPtr data_size, IntPtr shader);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              model_create_file   ([In] byte[] filename_utf8, IntPtr shader);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                model_set_id        (IntPtr model, string id);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              model_get_id        (IntPtr model);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_addref        (IntPtr model);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_release       (IntPtr model);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_draw          (IntPtr model, Matrix transform, Color color_linear, RenderLayer layer);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_recalculate_bounds(IntPtr model);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_set_bounds    (IntPtr model, in Bounds bounds);
		[DllImport(dll, CallingConvention = call                 )] public static extern Bounds              model_get_bounds    (IntPtr model);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_ray_intersect (IntPtr model, Ray model_space_ray, out Ray out_pt, Cull cull_mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_ray_intersect_bvh(IntPtr model, Ray model_space_ray, out Ray out_pt, Cull cull_mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_ray_intersect_bvh_detailed(IntPtr model, Ray model_space_ray, out Ray out_pt, IntPtr out_mesh, out Matrix out_matrix, out uint out_start_inds, Cull cull_mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_step_anim     (IntPtr model);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern int                 model_play_anim     (IntPtr model, string animation_name, AnimMode mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_play_anim_idx (IntPtr model, int index, AnimMode mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_set_anim_time (IntPtr model, float time);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_set_anim_completion(IntPtr model, float percent);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern int                 model_anim_find     (IntPtr model, string animation_name);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_anim_count    (IntPtr model);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_anim_active   (IntPtr model);
		[DllImport(dll, CallingConvention = call                 )] public static extern AnimMode            model_anim_active_mode(IntPtr model);
		[DllImport(dll, CallingConvention = call                 )] public static extern float               model_anim_active_time(IntPtr model);
		[DllImport(dll, CallingConvention = call                 )] public static extern float               model_anim_active_completion(IntPtr model);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              model_anim_get_name (IntPtr model, int index);
		[DllImport(dll, CallingConvention = call                 )] public static extern float               model_anim_get_duration(IntPtr model, int index);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              model_get_name      (IntPtr model, int subset);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              model_get_material  (IntPtr model, int subset);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              model_get_mesh      (IntPtr model, int subset);
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              model_get_transform (IntPtr model, int subset);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_set_material  (IntPtr model, int subset, IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_set_mesh      (IntPtr model, int subset, IntPtr mesh);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_set_transform (IntPtr model, int subset, in Matrix transform);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_remove_subset (IntPtr model, int subset);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern int                 model_add_named_subset(IntPtr model, string name, IntPtr mesh, IntPtr material, in Matrix transform);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_add_subset    (IntPtr model, IntPtr mesh, IntPtr material, in Matrix transform);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_subset_count  (IntPtr model);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern int                 model_node_add      (IntPtr model, string name, Matrix model_transform, IntPtr mesh, IntPtr material, int solid);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern int                 model_node_add_child(IntPtr model, int parent, string name, Matrix local_transform, IntPtr mesh, IntPtr material, int solid);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern int                 model_node_find     (IntPtr model, string name);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_sibling  (IntPtr model, int node);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_parent   (IntPtr model, int node);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_child    (IntPtr model, int node);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_count    (IntPtr model);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_index    (IntPtr model, int index);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_visual_count(IntPtr model);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_visual_index(IntPtr model, int index);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_iterate  (IntPtr model, int node);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_get_root (IntPtr model);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              model_node_get_name (IntPtr model, int node);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_get_solid(IntPtr model, int node);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_get_visible(IntPtr model, int node);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              model_node_get_material(IntPtr model, int node);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              model_node_get_mesh (IntPtr model, int node);
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              model_node_get_transform_model(IntPtr model, int node);
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              model_node_get_transform_local(IntPtr model, int node);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                model_node_set_name (IntPtr model, int node, string name);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_node_set_solid(IntPtr model, int node, int solid);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_node_set_visible(IntPtr model, int node, int visible);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_node_set_material(IntPtr model, int node, IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_node_set_mesh (IntPtr model, int node, IntPtr mesh);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_node_set_transform_model(IntPtr model, int node, Matrix transform_model_space);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_node_set_transform_local(IntPtr model, int node, Matrix transform_local_space);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              model_node_info_get (IntPtr model, int node, [In] byte[] info_key_utf8);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_node_info_set (IntPtr model, int node, [In] byte[] info_key_utf8, [In] byte[] info_value_utf8);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_info_remove(IntPtr model, int node, [In] byte[] info_key_utf8);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                model_node_info_clear(IntPtr model, int node);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_info_count(IntPtr model, int node);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 model_node_info_iterate(IntPtr model, int node, ref int ref_iterator, [Out] byte[] out_key_utf8, [Out] byte[] out_value_utf8);

		///////////////////////////////////////////
